# rstd

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
bench/: CMakeLists.txt  alloc.cpp  async.cpp  bench_main.cpp  benchmark.hpp  net.cpp  sync.cpp
src/: CMakeLists.txt  clone.cppm  convert.cppm  core.cppm  error.cppm  fmt.cppm  meson.build  mod.cpp  mod.cppm  panicking.cppm  trait.cppm
src/alloc/: CMakeLists.txt  alloc.cppm  boxed.cppm  meson.build  mod.cppm  rc.cppm  str.cppm  string.cppm  sync.cppm
src/alloc/collections/: mod.cppm
src/alloc/ffi/: c_str.cppm  mod.cppm
src/alloc/hash/: random.cppm
src/alloc/vec/: mod.cppm
src/argparse/: CMakeLists.txt  arg.cppm  command.cppm  error.cppm  matches.cppm  meson.build  mod.cppm  parser.cppm  schema.cppm  value_parser.cppm
src/basic/: CMakeLists.txt  basic.cppm  cppstd.cppm  literal.cppm  meson.build  meta.cppm  mod.cppm  mtp.cppm  mtp.std.cppm  panic_info.cppm  prelude.cppm  tuple.cppm
src/core/: CMakeLists.txt  any.cppm  array.cppm  assert.cppm  basic.cppm  char.cppm  choice.cppm  clone.cppm  clone_tuple.cppm  cmp.cppm  convert.cppm  core.cpp  core.cppm  cppstd.cppm  enum.cppm  f32.cppm  f64.cppm  fmt.cppm  future.cppm  hint.cppm  int.cppm  intrinsics.cppm  literal.cppm  log.cppm  marker.cppm  memchr.cppm  meson.build  meta.cppm  mod.cpp  mod.cppm  option.cppm  option_adapter.cppm  panic.cppm  panicking.cppm  pin.cppm  prelude.cppm  result.cppm  slice.cppm  std.cppm  task.cppm  (+4 more)
src/core/alloc/: global.cppm  layout.cppm  mod.cppm
src/core/ffi/: c_str.cppm  mod.cppm
src/core/fmt/: float.cppm
src/core/forward/: mod.cppm
src/core/hash/: mod.cppm
src/core/intrinsics/: mod.cppm
src/core/iter/: adapters.cppm  mod.cppm  range.cppm  sources.cppm  traits.cppm
src/core/mem/: drop_guard.cppm  manually_drop.cppm  maybe_uninit.cppm  mod.cppm
src/core/num/: bignum.cppm  dec2flt.cppm  flt2dec.cppm  integer.cppm  mod.cppm  niche_types.cppm  nonzero.cppm  u32.cppm
src/core/ops/: deref.cppm  function.cppm  mod.cppm
src/core/panic/: panic_info.cppm
src/core/ptr/: dyn.cppm  metadata.cppm  mod.cppm  non_null.cppm  ptr.cppm  unique.cppm
src/core/slice/: mod.cppm
src/core/str/: mod.cppm  str.cppm  traits.cppm
src/core/sync/: atomic.cppm  mod.cppm
src/cppstd/: CMakeLists.txt  cppstd.cppm  rstd.cppm
src/io/: CMakeLists.txt  error.cppm  mod.cppm
src/json/: CMakeLists.txt  error.cppm  meson.build  mod.cppm  number.cppm  parser.cppm  serialize.cppm  value.cppm
src/log/: CMakeLists.txt  env_logger.cppm  level.cppm  logger.cppm  macros.cppm  meson.build  mod.cppm  record.cppm
src/nostd/: CMakeLists.txt  cxa.cpp  new.cpp
src/rc/: CMakeLists.txt
src/rc/src/: mod.cppm  rc.cppm
src/runtime/: CMakeLists.txt  mod.cpp  mod.cppm
src/std/: CMakeLists.txt  alloc.cppm  env.cppm  error.cppm  forward.cppm  fs.cppm  meson.build  mod.cpp  mod.cppm  panicking.cppm  path.cppm  process.cppm  time.cppm
src/std/async/: CMakeLists.txt  atomic_waker.cppm  awaitable.cppm  completion.cppm  completion_queue.cppm  coro_driver.cppm  executor.cppm  facility.cppm  forward.cppm  io.cppm  join.cppm  mod.cppm  notify.cppm  oneshot.cppm  poll.cppm  reactor.cppm  readiness.cppm  runtime.cppm  runtime_core.cppm  runtime_driver.cppm  select.cppm  spawn.cppm  task.cppm  terminal.cppm  time.cppm  timer_facility.cppm
src/std/bytes/: CMakeLists.txt  mod.cppm
src/std/ffi/: mod.cppm  os_str.cppm
src/std/io/: CMakeLists.txt  buffered.cppm  cursor.cppm  error.cppm  mod.cppm  range.cppm  stdio.cppm  traits.cppm  util.cppm
src/std/net/: CMakeLists.txt  mod.cppm  tcp.cppm
src/std/process/: command.cppm  exit_status.cppm  mod.cppm  process.cpp
src/std/sync/: CMakeLists.txt  condvar.cppm  mod.cppm  mutex.cppm
src/std/sys/: CMakeLists.txt  fd.cppm  mod.cppm  socket.cppm
src/std/thread/: CMakeLists.txt  blocking_task_group.cppm  builder.cppm  current.cppm  forward.cppm  functions.cppm  id.cppm  join_handle.cppm  lifecycle.cppm  main_thread.cppm  mod.cppm  scoped.cppm  thread.cpp  thread.cppm
src/sync/: CMakeLists.txt  mod.cppm
src/sync/mpsc/: mod.cppm  mpsc.cppm
src/sync/poison/: mod.cppm  once.cppm
src/sys/: CMakeLists.txt  mod.cppm
src/sys/io/: mod.cppm
src/sys/lib/: mod.cppm  pthread.cppm
src/sys/libc/: libc.cppm  mod.cppm  pthread.cppm  unix.cppm
src/sys/pal/: mod.cppm
src/sys/sync/: once_box.cppm
src/sys/thread/: mod.cppm  (+2 more)
src/thread/: CMakeLists.txt  builder.cppm  current.cppm  forward.cppm  functions.cppm  id.cppm  join_handle.cppm  lifecycle.cppm  main_thread.cppm  mod.cppm  scoped.cppm  thread.cpp  thread.cppm
test/: CMakeLists.txt  any.cpp  any_module_check.cppm  array.cpp  async.cpp  bytes.cpp  char.cpp  clone.cpp  clone_tuple.cpp  compile.cpp  convert.cpp  deref.cpp  enum.cpp  env.cpp  example.cpp  floats.cpp  fmt.cpp  fs.cpp  hint.cpp  ints.cpp  io.cpp  log.cpp  log_module_check.cppm  meson.build  net.cpp  option.cpp  path.cpp  prelude.cpp  process.cpp  result.cpp  str.cpp  sys_fd.cpp  t1.cpp  test.cpp  thread.cpp  time.cpp  trait.cpp  try.cpp  try_async.cpp  try_coroutine.cpp  (+1 more)
test/alloc/: boxed.cpp  rc.cpp  str.cpp  string.cpp  sync.cpp  vec.cpp
test/argparse/: definition.cpp  errors.cpp  help.cpp  lifecycle.cpp  parsing.cpp  relations.cpp  subcommands.cpp  values.cpp
test/async/: abort_on_drop.cpp  concurrency.cpp  facility.cpp  frame.cpp  lifecycle.cpp  poll.cpp  runtime.cpp
test/collections/: btree_map.cpp  hash_map.cpp
test/compile_fail/: deref_mut_without_deref.cpp  run_compile_fail.cmake  std_does_not_export_json.cpp  trait_direct_api_mismatch.cpp  trait_external_api_mismatch.cpp  trait_external_const_api_mismatch.cpp  trait_impled_diagnostic.cpp  trait_in_class_api_mismatch.cpp  try_incompatible_error.cpp  try_option_to_result.cpp  try_result_to_option.cpp  try_unsupported_source.cpp
test/ffi/: os_str.cpp
test/iter/: iterator.cpp
test/json/: module.cpp  number.cpp  parser.cpp  serialize.cpp  value.cpp
test/nostd/: main.cpp
test/num/: nonzero.cpp
test/sync/: condvar.cpp  mpsc.cpp
test/thread/: blocking_task_group.cpp  thread.cpp
(+104 files in other folders)
