rstd_core_sources = [
  'mod.cpp',
  'mod.cppm',
  'prelude.cppm',
  'core.cppm',
  'trait.cppm',
  'marker.cppm',
  'convert.cppm',
  'clone.cppm',
  'option.cppm',
  'result.cppm',
  'fmt.cppm',
  'panic.cppm',
  'panicking.cppm',
  'log.cppm',
  'choice.cppm',
  'pin.cppm',
  'hint.cppm',
  'assert.cppm',
  'tuple.cppm',
  'memchr.cppm',
  'cmp.cppm',
  'time.cppm',
  'alloc/global.cppm',
  'alloc/layout.cppm',
  'alloc/mod.cppm',
  'panic/panic_info.cppm',
  'intrinsics/mod.cppm',
  'ffi/mod.cppm',
  'ffi/c_str.cppm',
  'hash/mod.cppm',
  'num/mod.cppm',
  'num/nonzero.cppm',
  'num/niche_types.cppm',
  'num/integer.cppm',
  'slice/mod.cppm',
  'str/mod.cppm',
  'str/str.cppm',
  'str/traits.cppm',
  'ptr/mod.cppm',
  'ptr/non_null.cppm',
  'ptr/dyn.cppm',
  'ptr/metadata.cppm',
  'ptr/ptr.cppm',
  'ops/mod.cppm',
  'ops/function.cppm',
  'mem/mod.cppm',
  'mem/manually_drop.cppm',
  'mem/maybe_uninit.cppm',
  'mem/drop_guard.cppm',
  'sync/mod.cppm',
  'sync/atomic.cppm',
  'forward/mod.cppm',
]

rstd_core_inc = include_directories('include')

rstd_core = static_library('rstd.core',
  rstd_core_sources,
  include_directories : rstd_core_inc,
  dependencies : rstd_basic_dep,
  cpp_args : ['-fsized-deallocation'],
)

rstd_core_dep = declare_dependency(
  link_with : rstd_core,
  include_directories : [rstd_core_inc, include_directories('.')],
)
